--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,36 +1,81 @@
 version: 2.1
 
 commands:
+  install_awscli:
+    description: Install AWS CLI v2
+    steps:
+      - run:
+          name: Install AWS CLI v2
+          command: |
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+
+  install_ansible:
+    description: Install Ansible
+    steps:
+      - run:
+          name: Install Ansible
+          command: |
+            python3 -m pip install --user ansible
+
+  install_nodejs:
+    description: Install Node.js 13.8.0
+    steps:
+      - run:
+          name: Install Node.js 13.8.0
+          command: |
+            # Install Node.js LTS version as our base Node.js version
+            curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+            sudo apt install -y nodejs
+
+            # Use n version manager to use Node.js v13.8.0
+            sudo npm install --global n
+            sudo n 13.8.0
+
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
-      # Add parameter here   
+      workflow_id:
+        type: string  
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
     steps:
       - run:
           name: Destroy environments
           when: on_fail
           command: |
-            # Your code here
-            exit 1
+            # Delete backend stack
+            aws cloudformation delete-stack \
+              --stack-name udapeople-backend-<<parameters.workflow_id>>
+            # Delete frontend stack
+            aws cloudformation delete-stack \
+              --stack-name udapeople-frontend-<<parameters.workflow_id>>     
+            # Empty frontend bucket
+            aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
-      # Add parameter here     
+      # Add parameter here
+      Workflow_ID:
+        type: string
+        default: ${CIRCLE_WORKFLOW_ID:0:7}     
     steps:
       - run:
           name: Revert migrations
           # Add when this will run
+          when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = 1
+            SUCCESS=$(curl --insecure  https://kvdb.io/${KVDB_BUCKET}/migration_<< parameters.Workflow_ID >>)
             if(( $SUCCESS==1 )); 
             then
-            #  cd ~/project/backend
-            #  npm install
+              cd ~/project/backend
+              npm install
             #  Add revert code here. You can find this in the Getting Started section.
-              exit 1
+              npm run migration:revert
             fi
+
             
 jobs:
   build-frontend:
@@ -165,41 +210,103 @@ jobs:
             npm audit fix --audit-level=critical --force
           # npm audit --audit-level=critical
 
-#   deploy-infrastructure:
+  deploy-infrastructure:
+    docker:
+      # Docker image here that supports AWS CLI
+      - image: cimg/python:3.10
+    steps:
+        # Checkout code from git
+        - checkout
+        - install_awscli
+        
+        - run:
+            name: Ensure back-end infrastructure exists
+            command: |
+              aws cloudformation deploy \
+                --template-file .circleci/files/backend.yml \
+                --tags project=udapeople \
+                --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"\
+                --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" 
+              
+        - run:
+            name: Ensure front-end infrastructure exist
+            command: |
+              aws cloudformation deploy \
+                --template-file .circleci/files/frontend.yml \
+                --tags project=udapeople \
+                --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"\
+                --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" 
+                
+        - run:
+            name: Add back-end ip to ansible inventory
+            command: |
+              BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
+                --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                --output text)
+              echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
+              cat .circleci/ansible/inventory.txt
+    
+  configure-infrastructure:
+    docker:
+    - image: cimg/python:3.10
+    steps:
+    - checkout
+    - install_ansible
+    - install_awscli
+    - add_ssh_keys:
+       fingerprints: ["66:b8:10:6e:fe:19:bc:e8:8e:1f:6c:94:21:a6:79:07"]
+    - attach_workspace:
+        at: ~/
+    - run:
+       name: Run Configure Server Ansible play
+       command: |
+         cd .circleci/ansible
+         cat inventory.txt
+
+         ansible-playbook -i inventory.txt configure-server.yml
+    - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}          
+  
+  # run-migrations:
+  #   docker:
+  #     # Docker image here that supports NodeJS
+  #   steps:
+  #     # Checkout code from git
+  #     - run:
+  #         name: Run migrations
+  #         command: |
+  #           # Your code here
+  #           exit 1
+  #     - run:
+  #         name: Send migration results to memstash
+  #         command: |
+  #           # Your code here
+  #           exit 1
+     # Here's where you will add some code to rollback on failure      
+
+#   deploy-frontend:
 #     docker:
 #       # Docker image here that supports AWS CLI
 #     steps:
 #       # Checkout code from git
 #       - run:
-#           name: Ensure back-end infrastructure exists
+#           name: Install dependencies
 #           command: |
-#             aws cloudformation deploy \
-#               --template-file .circleci/files/backend.yml \
-#               #--tags project=your-tag \
-#               # --stack-name "your back-end stack name with workflow id" \
-#               # --parameter-overrides ID="your workflow id"  
-#               exit 1
+#             # your code here
 #       - run:
-#           name: Ensure front-end infrastructure exist
+#           name: Get backend url
 #           command: |
-#             aws cloudformation deploy \
-#               --template-file .circleci/files/frontend.yml \
-#               #--tags project=your-tag \
-#               # --stack-name "your front-end stack name with workflow id" \
-#               # --parameter-overrides ID="your workflow id"  
-#               exit 1
+#             # your code here
+#             export API_URL="http://${BACKEND_IP}:3030"
+#             echo "${API_URL}"
 #       - run:
-#           name: Add back-end ip to ansible inventory
+#           name: Deploy frontend objects
 #           command: |
-#             # Your code here
-#             exit 1
-#       - persist_to_workspace:
-#           root: ~/
-#           paths:
-#             - project/.circleci/ansible/inventory.txt
+#             # your code here
 #       # Here's where you will add some code to rollback on failure      
-
-# #   configure-infrastructure:
+                    
+# #   deploy-backend:
 # #     docker:
 # #       # Docker image here that supports Ansible
 # #     steps:
@@ -209,35 +316,16 @@ jobs:
 # #       - run:
 # #           name: Install dependencies
 # #           command: |
-# #             # Your code here
-# #             exit 1
+# #             # your code here
 # #       - run:
-# #           name: Configure server
+# #           name: Deploy backend
 # #           command: |
-# #             # Your code here
-# #             exit 1
-# #       # Here's where you will add some code to rollback on failure      
+# #             # your code here
+# #       # Here's where you will add some code to rollback on failure  
 
-# #   # run-migrations:
-# #   #   docker:
-# #   #     # Docker image here that supports NodeJS
-# #   #   steps:
-# #   #     # Checkout code from git
-# #   #     - run:
-# #   #         name: Run migrations
-# #   #         command: |
-# #   #           # Your code here
-# #   #           exit 1
-# #   #     - run:
-# #   #         name: Send migration results to memstash
-# #   #         command: |
-# #   #           # Your code here
-# #   #           exit 1
-# #      # Here's where you will add some code to rollback on failure      
-
-# # #   deploy-frontend:
+# # #   smoke-test:
 # # #     docker:
-# # #       # Docker image here that supports AWS CLI
+# # #       # Lightweight Docker image 
 # # #     steps:
 # # #       # Checkout code from git
 # # #       - run:
@@ -248,87 +336,49 @@ jobs:
 # # #           name: Get backend url
 # # #           command: |
 # # #             # your code here
-# # #             export API_URL="http://${BACKEND_IP}:3030"
-# # #             echo "${API_URL}"
 # # #       - run:
-# # #           name: Deploy frontend objects
+# # #           name: Backend smoke test.
 # # #           command: |
 # # #             # your code here
-# # #       # Here's where you will add some code to rollback on failure      
-                    
-# # # #   deploy-backend:
+# # #       - run:
+# # #           name: Frontend smoke test.
+# # #           command: |
+# # #             # your code here
+# # #       # Here's where you will add some code to rollback on failure  
+
+# # # #   cloudfront-update:
 # # # #     docker:
-# # # #       # Docker image here that supports Ansible
+# # # #       # Docker image here that supports AWS CLI
 # # # #     steps:
 # # # #       # Checkout code from git
-# # # #       # Add ssh keys with fingerprint
-# # # #       # attach workspace
 # # # #       - run:
 # # # #           name: Install dependencies
 # # # #           command: |
 # # # #             # your code here
 # # # #       - run:
-# # # #           name: Deploy backend
+# # # #           name: Update cloudfront distribution
 # # # #           command: |
 # # # #             # your code here
 # # # #       # Here's where you will add some code to rollback on failure  
 
-# # # # #   smoke-test:
+# # # # # cleanup:
 # # # # #     docker:
-# # # # #       # Lightweight Docker image 
+# # # # #       # Docker image here
 # # # # #     steps:
 # # # # #       # Checkout code from git
 # # # # #       - run:
-# # # # #           name: Install dependencies
+# # # # #           name: Get old stack workflow id
 # # # # #           command: |
 # # # # #             # your code here
+# # # # #             export OldWorkflowID="the id here"
+# # # # #             export STACKS=[] #put the list of stacks here
 # # # # #       - run:
-# # # # #           name: Get backend url
+# # # # #           name: Remove old stacks and files
 # # # # #           command: |
-# # # # #             # your code here
-# # # # #       - run:
-# # # # #           name: Backend smoke test.
-# # # # #           command: |
-# # # # #             # your code here
-# # # # #       - run:
-# # # # #           name: Frontend smoke test.
-# # # # #           command: |
-# # # # #             # your code here
-# # # # #       # Here's where you will add some code to rollback on failure  
-
-# # # # # #   cloudfront-update:
-# # # # # #     docker:
-# # # # # #       # Docker image here that supports AWS CLI
-# # # # # #     steps:
-# # # # # #       # Checkout code from git
-# # # # # #       - run:
-# # # # # #           name: Install dependencies
-# # # # # #           command: |
-# # # # # #             # your code here
-# # # # # #       - run:
-# # # # # #           name: Update cloudfront distribution
-# # # # # #           command: |
-# # # # # #             # your code here
-# # # # # #       # Here's where you will add some code to rollback on failure  
-
-# # # # # # # cleanup:
-# # # # # # #     docker:
-# # # # # # #       # Docker image here
-# # # # # # #     steps:
-# # # # # # #       # Checkout code from git
-# # # # # # #       - run:
-# # # # # # #           name: Get old stack workflow id
-# # # # # # #           command: |
-# # # # # # #             # your code here
-# # # # # # #             export OldWorkflowID="the id here"
-# # # # # # #             export STACKS=[] #put the list of stacks here
-# # # # # # #       - run:
-# # # # # # #           name: Remove old stacks and files
-# # # # # # #           command: |
-# # # # # # #             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-# # # # # # #             then
-# # # # # # #               # your code here
-# # # # # # #             fi
+# # # # #             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+# # # # #             then
+# # # # #               # your code here
+# # # # #             fi
             
 
 workflows:
@@ -344,13 +394,13 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
-      # - deploy-infrastructure:
-      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters:
-      #       branches:
-      #         only: [test-feature-branch]
-      # - configure-infrastructure:
-      #     requires: [deploy-infrastructure]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [main]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
       # - run-migrations:
       #     requires: [configure-infrastructure]
       # - deploy-frontend:
