--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -261,10 +261,10 @@ jobs:
     - run:
        name: Run Configure Server Ansible play
        command: |
-         cd .circleci/ansible
-         cat inventory.txt
-
-         ansible-playbook -i inventory.txt configure-server.yml
+        cd .circleci/ansible
+        echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
+        cat inventory.txt
+        ansible-playbook -i inventory.txt configure-server.yml
     - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}          
   
