--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,7 +262,7 @@ jobs:
        name: Run Configure Server Ansible play
        command: |
         cd .circleci/ansible
-        echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
+        echo $BACKEND_PUBLIC_IP >> inventory.txt
         cat inventory.txt
         ansible-playbook -i inventory.txt configure-server.yml
     - destroy-environment:
