--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -261,6 +261,10 @@ jobs:
     - run:
        name: Run Configure Server Ansible play
        command: |
+        BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
+          --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+          --query 'Reservations[*].Instances[*].PublicIpAddress' \
+          --output text)
         cd .circleci/ansible
         echo $BACKEND_PUBLIC_IP >> inventory.txt
         cat inventory.txt
