--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -413,9 +413,9 @@ jobs:
             echo "${API_URL}"
             if curl "${API_URL}/api/status" | grep "ok"
             then
-                return 0
+                exit 0
             else
-                return 1
+                exit 1
             fi
       - run:
           name: Frontend smoke test.
@@ -424,9 +424,9 @@ jobs:
             echo ${URL}
             if curl -s $FRONTEND_WEBSITE | grep "Welcome"
             then
-              return 1
+              exit 1
             else
-              return 1
+              exit 1
             fi
       # Here's where you will add some code to rollback on failure
       - destroy-environment
