--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -473,10 +473,8 @@ jobs:
         - install_awscli
         - install_nodejs
         - run:
-            name: Get old stack workflow id
+            name: Fetch the Old workflow ID
             command: |
-              
-              # Fetch the Old workflow ID
               export OldWorkflowID=$(aws cloudformation \
                       list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                       --no-paginate --output text)
@@ -485,11 +483,9 @@ jobs:
               # Fetch the stack names          
               export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                       --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
-              echo Stack names: "${STACKS[@]}"    
-        - run:
-            name: Remove old stacks and files
-            command: |
-              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OldWorkflowID}" ]]
+              echo Stack names: "${STACKS[@]}" 
+
+              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
                 then
                   echo "----------------Deleted Confirmed-------------------"
                   aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
@@ -497,9 +493,8 @@ jobs:
                   aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
                 else
                   echo "------------------Cannot Cleanup----------------------"
-                fi
-
-            
+                fi   
+       
 
 workflows:
   default:
