--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -472,27 +472,42 @@ jobs:
         - install_awscli
         - install_nodejs
         - run:
-            name: Fetch the Old workflow ID
+            name: Remove old stacks and files
             command: |
-              export OldWorkflowID=$(aws cloudformation \
-                      list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-                      --no-paginate --output text)
-              echo OldWorkflowID: "${OldWorkflowID}"
-              echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-              # Fetch the stack names          
-              export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-                      --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
-              echo Stack names: "${STACKS[@]}" 
+              export STACKS=($(aws cloudformation list-stacks \
+                  --query "StackSummaries[*].StackName" \
+                  --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+              echo Stack names: "${STACKS[@]}"
+              export OldWorkflowID=$(curl --insecure https://kvdb.io/4ow2x7yG2iuRK9Bnmawe8L/old_workflow_id)
+              echo Old Workflow ID: $OldWorkflowID 
+              if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+              then
+                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              fi
+        # - run:
+        #     name: Fetch the Old workflow ID
+        #     command: |
+        #       export OldWorkflowID=$(aws cloudformation \
+        #               list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+        #               --no-paginate --output text)
+        #       echo OldWorkflowID: "${OldWorkflowID}"
+        #       echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+        #       # Fetch the stack names          
+        #       export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+        #               --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+        #       echo Stack names: "${STACKS[@]}" 
 
-              if [[ "${OldWorkflowID}" =~ "${STACKS[:0:7]}"  ]]
-                then
-                  echo "----------------Deleted Confirmed-------------------"
-                  aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-                  aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-                  aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-                else
-                  echo "------------------Cannot Cleanup----------------------"
-                fi   
+        #       if [[ "${OldWorkflowID}" =~ "${STACKS[:0:7]}"  ]]
+        #         then
+        #           echo "----------------Deleted Confirmed-------------------"
+        #           aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+        #           aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+        #           aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+        #         else
+        #           echo "------------------Cannot Cleanup----------------------"
+        #         fi   
        
 
 workflows:
