--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -482,9 +482,12 @@ jobs:
               echo Old Workflow ID: $OldWorkflowID 
               if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
               then
+                echo "----------------Deleted Confirmed-------------------"
                 aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
                 aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                 aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              else
+                echo "------------------Cannot Cleanup----------------------"
               fi
         # - run:
         #     name: Fetch the Old workflow ID
@@ -538,7 +541,7 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - cleanup:
+      #     requires: [cloudfront-update]
