--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -471,23 +471,21 @@ jobs:
         - checkout
         - install_awscli
         - install_nodejs
+        
         - run:
-            name: Remove old stacks and files
+            name: Get old stack workflow id and remove stacks
             command: |
-              export STACKS=($(aws cloudformation list-stacks \
-                  --query "StackSummaries[*].StackName" \
-                  --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
-              echo Stack names: "${STACKS[@]}"
-              export OldWorkflowID=$(curl --insecure https://kvdb.io/4ow2x7yG2iuRK9Bnmawe8L/old_workflow_id)
-              echo Old Workflow ID: $OldWorkflowID 
+              echo <<parameters.workflow_id>>
+              export OldWorkflowID=<<parameters.workflow_id>>
+              export STACKS=$(aws cloudformation list-stacks \
+              --query "StackSummaries[*].StackName" \
+              --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
               if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
               then
-                echo "----------------Deleted Confirmed-------------------"
+                echo "----------cleaning up stacks------------"
                 aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
                 aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                 aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-              else
-                echo "------------------Cannot Cleanup----------------------"
               fi
         # - run:
         #     name: Fetch the Old workflow ID
