--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -475,40 +475,25 @@ jobs:
         - run:
             name: Get old stack workflow id and remove stacks
             command: |
-              echo <<parameters.workflow_id>>
-              export OldWorkflowID=<<parameters.workflow_id>>
-              export STACKS=$(aws cloudformation list-stacks \
-              --query "StackSummaries[*].StackName" \
-              --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
-              if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-              then
-                echo "----------cleaning up stacks------------"
-                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-                aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-              fi
-        # - run:
-        #     name: Fetch the Old workflow ID
-        #     command: |
-        #       export OldWorkflowID=$(aws cloudformation \
-        #               list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-        #               --no-paginate --output text)
-        #       echo OldWorkflowID: "${OldWorkflowID}"
-        #       echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-        #       # Fetch the stack names          
-        #       export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-        #               --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
-        #       echo Stack names: "${STACKS[@]}" 
+              export OldWorkflowID=$(aws cloudformation \
+                      list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                      --no-paginate --output text)
+              echo OldWorkflowID: "${OldWorkflowID}"
+              echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+              # Fetch the stack names          
+              export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                      --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+              echo Stack names: "${STACKS[@]}" 
 
-        #       if [[ "${OldWorkflowID}" =~ "${STACKS[:0:7]}"  ]]
-        #         then
-        #           echo "----------------Deleted Confirmed-------------------"
-        #           aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-        #           aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-        #           aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-        #         else
-        #           echo "------------------Cannot Cleanup----------------------"
-        #         fi   
+              if [[ "${OldWorkflowID}" != "${STACKS[@]}"  ]]
+                then
+                  echo "----------------Deleted Confirmed-------------------"
+                  aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                  aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+                  aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+                else
+                  echo "------------------Cannot Cleanup----------------------"
+                fi   
        
 
 workflows:
@@ -539,7 +524,7 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      # - cloudfront-update:
-      #     requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]
+      - cloudfront-update:
+          requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
