--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -488,7 +488,7 @@ jobs:
               if [[ "${OldWorkflowID}" != "${STACKS[@]}"  ]]
                 then
                   echo "----------------Deleted Confirmed-------------------"
-                  aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                  aws s3 rm "s3://${OldWorkflowID}" --recursive
                   aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                   aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
                 else
